--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "dependencies": {
     "express": "2.5.0",
     "jade": ">= 0.0.1",
-    "mongoose": "~3.5.5",
-    "node-dev": "~0.2.10"
+    "mongoose": "~3.5.5"
   }
 }
