--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "devserver": "./node_modules/node-dev/node-dev server.js"
   },
   "dependencies": {
-    "express": "2.5.0",
-    "jade": ">= 0.0.1",
-    "mongoose": "~3.5.5"
+    "mongoose": "~3.5.5",
+    "express": "~3.1.1"
   }
 }
