--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node server",
-    "devserver": "./node_modules/node-dev/node-dev server.js"
+    "start": "node server"
   },
   "dependencies": {
     "mongoose": "~3.5.5",
     "express": "~3.1.1"
+  },
+  "devDependencies": {
+    "coffee-script": "~1.6.2"
   }
 }
